engine-net-2/examples/Errors/IndexAccessDirectionUnknownCompiled.grg
#include "Rules.grg"

sequence s1
{
	for{v:N in {asc(idx>7)}; true}
}
